--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,6 +55,8 @@ flutter:
     - assets/quran.png
     - assets/ayyah_icon.png
     - assets/quran/surah_list.json
+    - assets/quran/juz.json
+    - assets/quran/dua_list.json
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
