--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,20 +46,21 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/
+    - assets/surahs.png
+    - assets/reading_quran.png
+    - assets/bookmark.png
+    - assets/kid_dua.png
+    - assets/juz.png
+    - assets/last_read.png
+    - assets/quran.png
+    - assets/ayyah_icon.png
+    - assets/quran/surah_list.json
+    - assets/quran/juz.json
+    - assets/quran/dua_list.json
     - assets/quran/en.pretty.json
-#  /surahs.png
-#- assets/reading_quran.png
-#- assets/bookmark.png
-#- assets/kid_dua.png
-#- assets/juz.png
-#- assets/last_read.png
-#- assets/quran.png
-#- assets/ayyah_icon.png
-#- assets/quran/surah_list.json
-#- assets/quran/juz.json
-#- assets/quran/dua_list.json
-#- assets/quran/surah
+    - assets/quran/basmala1.png
+    - assets/quran/basmala2.png
+
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
 
@@ -71,12 +72,46 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
+  fonts:
+    - family: amiri
+      fonts:
+        - asset: assets/fonts/amiri.ttf
+    - family: AmiriLetters
+      fonts:
+        - asset: assets/fonts/amiri-quran-letters.ttf
+
+
+    - family: uthmani
+      fonts:
+        - asset: assets/fonts/Uthmani.otf
+
+
+    - family: uthmanihafs
+      fonts:
+        - asset: assets/fonts/uthmanic_hafs_ver12.otf
+
+    - family: amiribold
+      fonts:
+        - asset: assets/fonts/Amiri-Bold.ttf
+
+    - family: pdmssaleem
+      fonts:
+        - asset: assets/fonts/PDMS_Saleem_QuranFont.ttf
+
+    - family: reemkufi
+      fonts:
+        - asset: assets/fonts/ReemKufi-Regular.ttf
+
+
+    - family: droid
+      fonts:
+        - asset: assets/fonts/DroidNaskh.ttf
+
+    - family: me
+      fonts:
+        - asset: assets/fonts/me_quran.ttf
+
+
   #   - family: Trajan Pro
   #     fonts:
   #       - asset: fonts/TrajanPro.ttf
