--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,7 +50,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/surahs.png
+    - assets/
     - assets/reading_quran.png
     - assets/bookmark.png
     - assets/kid_dua.png
