--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,8 @@ dependencies:
   shared_preferences: ^0.5.12+4
   provider: ^4.3.2+3
   google_fonts: ^1.1.1
+  http: ^0.12.2
+  audioplayers: ^0.17.4
 
 dev_dependencies:
   flutter_test:
