--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   google_fonts: ^1.1.1
   http: ^0.12.2
   audioplayers: ^0.17.4
+  path_provider: ^1.6.27
 
 dev_dependencies:
   flutter_test:
