--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,7 +32,7 @@ dependencies:
   shared_preferences: ^0.5.12+4
   provider: ^4.3.2+3
   google_fonts: ^1.1.1
-  http: ^0.12.2
+  http: ^0.12.0+2
   audioplayers: ^0.17.4
   path_provider: ^1.6.27
 
