--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   path_provider: ^1.6.22
   dio: ^3.0.1
   dio_http_cache: ^0.2.11
+  share: ^2.0.4
 
 dev_dependencies:
   flutter_test:
